minor spacing fixes

--- a/pages/page.module.css
+++ b/pages/page.module.css
@@ -111,9 +111,9 @@
 
 .cohIcon {
   position: relative;
-  margin-top: -20vh;
+  margin-top: -9vh;
   z-index: 0;
-  margin-bottom: -115vh;
+  margin-bottom: -119vh;
 }
 
 .cohIcon img {
